src/App.css
@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Nunito Sans", sans-serif;
}

button {
  border: none;
  margin: 0;
  padding: 0;
  width: auto;
  overflow: visible;
  color: inherit;
  font: inherit;
  line-height: normal;
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  background-color: #023047;
  color: white;
  padding: 5px 10px;
  border-radius: 5px;
}

.app-container {
  height: 100vh;
  display: grid;
  grid-template-areas:
    "navbar"
    "song"
    "player";
  grid-template-rows: 100px 1fr 150px;
}

